# QMAgent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
skills/pyscf/: SKILL.md
skills/pyscf/references/: api_reference.md  methods_reference.md
skills/pyscf/scripts/: compute_esp.py  run_dft.py
skills/rdkit/: SKILL.md
skills/rdkit/scripts/: transform_and_embed.py
src/qmagent/: demo.py  llm_interface.py  llm_interface.py.bak  main.py  mcp_client.py  mcp_server.py  mcp_server.py.bak  prompts.py  test_systems.py  tools.py
src/qmagent/agents/: amber_apps.py  distributed.py  parsl_configs.py  qm_agent.py  resp_fitter.py
src/qmagent/utils/: file_ops.py  parsl_settings.py  pydantic_models.py
tests/: conftest.py  test_amber_apps.py  test_cpu_path.py  test_file_ops.py  test_llm_interface.py  test_mcp_server.py  test_pydantic_models.py  test_qm_agent.py  test_qm_agent_actions.py  test_resp_fitter.py  test_tools.py
