[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmagent"
version = "0.1.0"
description = "Agentic QM-derived force-field parameterization."
requires-python = ">=3.12"
# Runtime dependencies (rdkit, numpy, scipy, pydantic, parsl, academy, ...) are
# not pinned here yet; they are currently provisioned into the environment
# directly. Declare them here when the package is published.
dependencies = []

[project.optional-dependencies]
# Dev/test dependencies. Install (editable) with uv:
#   uv pip install -e '.[dev]'
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qmagent"]

[tool.pytest.ini_options]
# Keep src on sys.path so tests run even without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
